# hds-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  queue.rs  stack.rs
src/kv/: datastore.rs  mod.rs
src/kv/datastore/: heap.rs  mod.rs  static.rs
