[package]
name = "hds"
version = "0.2.1"
authors = ["Edwin Svensson <hdsrs@olback.net>"]
edition = "2021"
documentation = "https://docs.rs/hds/latest/hds/"
description = "Heapless Data Structures for `no_std` environments"
homepage = "https://github.com/olback/hds-rs"
repository = "https://github.com/olback/hds-rs"
readme = "README.md"
keywords = ["no_std", "embedded", "data-structures"]
categories = ["embedded", "no-std", "data-structures"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["std"]

[features]
default = []
std = []

[dependencies]
